working on layout.html

--- a/css/screen.css
+++ b/css/screen.css
@@ -17,6 +17,7 @@ html {
     line-height: 1.5;
     font-family: "Helvetica Neue", Helvetica, arial, sans-serif;
     color: #111;
+    box-sizing: border-box;
 }
 
 /*
@@ -167,6 +168,43 @@ a:focus {
     Object description
 */
 
+.o-row {
+    padding: 24px 24px 0;
+    display: flow-root;
+}
+
+.o-row--grey-dark{
+    background-color: rgb(48, 48, 48);
+    color: white;
+}
+
+.o-row--primary{
+    background-color: orange;
+    color: white;
+}
+
+@media (min-width: 768px) {
+    .o-row--lg {
+        padding: 48px 48px 0;
+    }
+}
+
+.o-container {
+    max-width: 90em;
+    margin: 0 auto;
+   }
+
+.o-layout{
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    flex-wrap: wrap;
+    flex-basis: 100%;
+}
+
+.o-layout--gutter > .o-layout__item {
+    padding: 0 12px;
+}
 /*------------------------------------*\
   #COMPONENTS
 \*------------------------------------*/
@@ -177,6 +215,19 @@ a:focus {
     Component description
 */
 
+.c-layout-block {
+    background-color: LightGrey;
+    padding: 8px 12px;
+    font-size: 14px;
+    line-height: 16px;
+}
+
+.c-layout-block--ellipsis {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
 /*------------------------------------*\
   #UTILITIES
 \*------------------------------------*/
@@ -184,18 +235,103 @@ a:focus {
 /*
     Utilities: max-width
     ---
-    Utility classes to put specific max widths onto elements.
+    Utility classes to put specific max widths onto elements
 */
 
 .u-max-width-sm {
-    max-width: 36em;
+    max-width: 36em !important;
+}
+
+.u-max-width-md {
+    max-width: 45em !important;
+}
+
+.u-max-width-lg {
+    max-width: 60em !important;
+}
+
+.u-max-width-xl {
+    max-width: 75em !important;
+}
+
+.u-max-width-none {
+    max-width: none !important;
 }
 
 /*
-    Utility: Utility name
+    Utility: Flex
     ---
-    Utility description
+    Utility classes to put specific flex properties onto elements
+    Will be mostly used on o-layout__item
 */
+
+.u-flex-basis-auto {
+    flex-basis: auto !important;
+}
+
+.u-flex-grow-1 {
+    flex-grow: 1 !important;
+}
+
+.u-1-of-2 {
+    flex-basis: calc(100% / 2) !important;
+}
+
+.u-1-of-3 {
+    flex-basis: calc(100% / 3) !important;
+}
+
+.u-2-of-3 {
+    flex-basis: calc(100% / 3 * 2) !important;
+}
+
+.u-1-of-4 {
+    flex-basis: calc(100% / 4) !important;
+}
+
+.u-3-of-4 {
+    flex-basis: calc(100% / 4 * 3) !important;
+}
+
+.u-1-of-5 {
+    flex-basis: calc(100% / 5) !important;
+}
+
+.u-2-of-5 {
+    flex-basis: calc(100% / 5 * 2) !important;
+}
+
+.u-3-of-5 {
+    flex-basis: calc(100% / 5 * 3) !important;
+}
+
+.u-4-of-5 {
+    flex-basis: calc(100% / 5 * 4) !important;
+}
+
+.u-1-of-6 {
+    flex-basis: calc(100% / 6) !important;
+}
+
+.u-5-of-6 {
+    flex-basis: calc(100% / 6 * 5) !important;
+}
+
+@media (min-width: 576px) {
+    .u-1-of-2-bp1 {}
+}
+
+@media (min-width: 768px) {
+    .u-1-of-2-bp2 {}
+}
+
+@media (min-width: 992px) {
+    .u-1-of-2-bp3 {}
+}
+
+@media (min-width: 1200px) {
+    .u-1-of-2-bp4 {}
+}
 
 /*------------------------------------*\
   #MEDIA
